--- a/HMM.ipynb
+++ b/HMM.ipynb
@@ -20,7 +20,7 @@
       "cell_type": "markdown",
       "source": [
         "## Demo Hidden Markov Chain\n",
-        "Code cài đặt của nhóm được đẩy lên accountaccount github thành viên Trịnh Quốc Huy (20120013) https://github.com/huyquoctrinh/HiddenMarkovChain.git, các thuật toán được đóng gói thành 1 lớp để tiện cho việc chạy bài demo trên google colab"
+        "Code cài đặt của nhóm được đẩy lên account github thành viên Trịnh Quốc Huy (20120013) https://github.com/huyquoctrinh/HiddenMarkovChain.git, các thuật toán được đóng gói thành 1 lớp để tiện cho việc chạy bài demo trên google colab"
       ],
       "metadata": {
         "id": "an1XVBNI8kVK"
